--- a/old.html
+++ b/old.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>gaana.com</title>
-    <link rel="stylesheet" href="assests/css/bootstrapcss/bootstrap.min.css">
-    <link rel="stylesheet" href="assests/css/font-awesome.css">
-    <link rel="stylesheet" href="assests/css/main.css">
-    <link rel="stylesheet" href="assests/css/media_queries.css">
+    <link rel="stylesheet" href="css/bootstrapcss/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media_queries.css">
 <!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">-->
     <!--    <script src="assests/js/bootstrap.min.js"></script>-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
