--- a/try.html
+++ b/try.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/bootstrapcss/bootstrap.min.css">
-<!--    <link rel="stylesheet" href="/css/animate.css">-->
+    <link rel="stylesheet" href="css/bootstrapcss/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="css/animate.css">-->
       <link rel="stylesheet" href="src/owl.carousel.min.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/media_queries.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/media_queries.css">
 <!--    <script src="assests/js/ganna.json"></script>-->
     
 </head>
