--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
    <!-- <link rel="stylesheet" href="src/jquery-ui.css">-->
     <link rel="stylesheet" href="css/css.css">
-<!--    <link rel="stylesheet" href="/css/animate.css">--> 
+<!--    <link rel="stylesheet" href="css/animate.css">--> 
     <link rel="stylesheet" href="css/media_queries.css">
 <!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">-->
     <!--    <script src="assests/js/bootstrap.min.js"></script>-->
