--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/bootstrapcss/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
    <!-- <link rel="stylesheet" href="src/jquery-ui.css">-->
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/index.css">
 <!--    <link rel="stylesheet" href="css/animate.css">--> 
     <link rel="stylesheet" href="css/media_queries.css">
 <!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">-->
